--- a/Materias/2S2020/PED_CE342/Aulas/Panorama.tex
+++ b/Materias/2S2020/PED_CE342/Aulas/Panorama.tex
@@ -1,4 +1,4 @@
-% Created 2020-12-08 ter 19:41
+% Created 2020-12-09 qua 18:49
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation]{beamer}
   \usepackage{csquotes, caption}
@@ -7,7 +7,7 @@
 \addbibresource{refs.bib}
 \addbibresource{/HDD/Org/all_my_refs.bib}
 \usetheme{default}
-\author{PED: Gabriel Petrini}
+\author{PEDs: Gabriel Petrini e Marília Cubero}
 \date{04 de Janeiro de 2021}
 \title{Panorama Macroeconômico e a relação com a Inflação}
 \begin{document}
@@ -18,9 +18,9 @@
 \end{frame}
 
 \section{Introdução}
-\label{sec:orgba5f31e}
+\label{sec:org5f8770f}
 
-\begin{frame}[label={sec:org7c3b14f}]{Estrutura das aulas}
+\begin{frame}[label={sec:orgfb4e93e}]{Estrutura das aulas}
 A aula terá a seguinte estrutura
 \begin{itemize}
 \item \alert{Teórico:} Conjuntura pré-Regime de Metas e revisão teórica
@@ -39,9 +39,9 @@ A aula terá a seguinte estrutura
 
 
 \section{Preâmbulo: Cenário internacional adverso, Implementação do RMI e a herança maldita}
-\label{sec:orgd34d33f}
+\label{sec:orgda09e31}
 
-\begin{frame}[label={sec:orgf7f3202}]{A Herança Maldita \cite{belluzzoDepoisQuedaEconomia2002}}
+\begin{frame}[label={sec:orgf038ad2}]{A Herança Maldita \cite{belluzzoDepoisQuedaEconomia2002}}
 \begin{itemize}
 \item Crise Russa, Mexicana, Argentina \(\Rightarrow\) \emph{flight to quality}
 \item Instabilidade macroeconômica \(\Rightarrow\) \emph{stop and go}
@@ -59,9 +59,9 @@ A aula terá a seguinte estrutura
 \end{frame}
 
 \section{RMI: Esquema analítico}
-\label{sec:orgeb518e1}
+\label{sec:org1586bab}
 
-\begin{frame}[label={sec:org772e10c}]{Diagrama}
+\begin{frame}[label={sec:orgb1b1d39}]{Diagrama}
 \begin{figure}[htb]
 \centering
 \caption{Representação do Modelo do regime de Metas para inflação} 
@@ -70,7 +70,7 @@ A aula terá a seguinte estrutura
 \caption*{\textbf{Fonte:} Elaboração própria}
 \end{figure}
 \end{frame}
-\begin{frame}[label={sec:org926d2d4}]{Estrutura das Atas do Copom}
+\begin{frame}[label={sec:orga6f6585}]{Estrutura das Atas do Copom}
 \begin{itemize}
 \item Evolução recente da economia \(\Rightarrow\) \(h_{t-m}, h_{t}, (\pi_{t} - \pi^{\star}), \varepsilon^{D}, \varepsilon^{S}\)
 \item Avaliação prospectiva das tendências de inflação \(\Rightarrow\) \(\pi^{e}\)
@@ -93,12 +93,45 @@ A aula terá a seguinte estrutura
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgfe34296}]{Exemplo: Ata}
+\begin{frame}[label={sec:orgb807eed}]{Exemplo: \href{https://www.bcb.gov.br/publicacoes/atascopom/28102020}{Ata Nº234}}
+\begin{itemize}
+\item \alert{Setor externo:} \(\Downarrow\) retomada de alguns setores (\(\varepsilon^{F}\))
+\item Moderação da volatilidade dos ativos financeiros \(\Rightarrow\) favorece economias emergentes
+\item \alert{Mercado doméstico:} Recuperação desigual
+\begin{itemize}
+\item \(\Uparrow\) incerteza sobre a retomada \(\Leftrightarrow \Downarrow Y_{\text{Emerg.}}\)
+\end{itemize}
+\item \(\Uparrow\) projeção da inflação (\(\pi^{e}\))
+\begin{itemize}
+\item \(\Uparrow p_{\text{Alimentos}}, p_{\text{Bens ind.}} \Leftrightarrow\) depreciação do Real e das \emph{commodities} (\(\Delta e, \Delta p^{F}\))
+\item Perspectiva de normalização de preços com aumento extraordinário \(\Rightarrow \Downarrow\) produção e \(\Uparrow\) demanda (\(\varepsilon^{S}, \varepsilon^{D}\))
+\end{itemize}
+\item Ociosidade no setor de serviços (\(h_{t}_{\text{Serv}}\))
+\item \(Y_{\text{Emerg.}}\) e adiamento de reformas \(\Rightarrow\) \(\Uparrow\) prêmio de risco (\(\Delta x\))
+\item \(\Downarrow \Downarrow\) taxas de juros \(\Rightarrow\) instabilidade \(p_{\text{ativos}}\)
+\begin{itemize}
+\item Proximidade à ZLB (\(i_{t} \to 0\))
+\end{itemize}
+\item Projeções de inflação abaixo da meta (\(\pi_{t} < \pi^{\star}\))
+\begin{itemize}
+\item Expectativas de longo prazo ancoradas (\(\pi^{e} \to \pi^{\star}\))
+\end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}[label={sec:org36079ef}]{Exemplo: \href{https://www.bcb.gov.br/publicacoes/atascopom/28102020}{Ata Nº234 03/Nov/2020}}
+\begin{figure}[htb]
+\centering
+\caption{Representação de Análise de uma ata do COPOM}
+\includegraphics[width = 0.9\textwidth]{./figs/RMI_234.png}
+\label{fig:ata234}
+\caption*{\textbf{Fonte:} Elaboração própria}
+\end{figure}
 \end{frame}
 \section{Governos Lula e suas fases}
-\label{sec:org5e26f66}
+\label{sec:orgbd3c5c8}
 
-\begin{frame}[label={sec:org1afcf8f}]{Crescimento e desequilíbrios globais \cite{carneiroSupremaciaDosMercados2006}}
+\begin{frame}[label={sec:org5b29fb7}]{Crescimento e desequilíbrios globais \cite{carneiroSupremaciaDosMercados2006}}
 Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâmico e desequiblibrado entre 2002/3 a 2007/8
 
 \alert{Engrenagem comercial com 3 elos}
@@ -115,7 +148,7 @@ Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâ
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org5528e8f}]{Primeira Fase}
+\begin{frame}[label={sec:orgdf3e68f}]{Primeira Fase}
 Experimento desenvolvimentista junto de uma política macroeconômica conservadora:
 \begin{itemize}
 \item Continuidade do tripé
@@ -133,7 +166,7 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \alert{Contexto de transição complexa:} desconfiança dos credores e pressões financeiras
 \end{frame}
 
-\begin{frame}[label={sec:org5c45f1e}]{Segunda fase}
+\begin{frame}[label={sec:orgb4d7933}]{Segunda fase}
 \begin{itemize}
 \item Retomada do Estado como elemento condutor do Crescimento
 \item Desenho da política fiscal no centro de proposta do desenvolvimento
@@ -144,7 +177,7 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \end{frame}
 
 
-\begin{frame}[label={sec:org18bf49b}]{Dificuldades em aberto \cite{melloIndustrialismoAusteridadePolitica}}
+\begin{frame}[label={sec:org6d4ec0d}]{Dificuldades em aberto \cite{melloIndustrialismoAusteridadePolitica}}
 \begin{itemize}
 \item Limites do crescimento com expansão da demanda de consumo via crédito e políticas sociais
 \item Retomada da taxa de investimento, mas nível baixo
@@ -157,8 +190,8 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \end{frame}
 
 \section{Dados 2002-2011}
-\label{sec:org8b69459}
-\begin{frame}[label={sec:org4af0acd}]{Continuidades}
+\label{sec:org153a6bc}
+\begin{frame}[label={sec:orgbebe484}]{Continuidades}
 \begin{block}{Política cambial}
 Pouco mudou ao longo do tempo
 
@@ -190,7 +223,7 @@ Não foi alterado o regime fiscal definido na era FHC
 \end{frame}
 
 
-\begin{frame}[label={sec:orge9a33e0}]{Descontinuidades}
+\begin{frame}[label={sec:org59ab8f2}]{Descontinuidades}
 Conjugação de políticas de incentivo à renda e ao mercado interno
 
 \begin{itemize}
@@ -210,7 +243,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 
-\begin{frame}[label={sec:orgd4788de}]{Alguns resultados}
+\begin{frame}[label={sec:org6de67c3}]{Alguns resultados}
 \begin{itemize}
 \item Queda da taxa de desemprego aberta
 \item Valorização real do salário mínimo
@@ -222,7 +255,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 
 
 
-\begin{frame}[label={sec:org3b56542}]{Fatores determinantes}
+\begin{frame}[label={sec:org7a3e358}]{Fatores determinantes}
 \begin{itemize}
 \item Impulsos externos favoráveis
 \begin{itemize}
@@ -244,7 +277,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 
-\begin{frame}[label={sec:orgdc61fbf}]{PIB puxado pelo mercado doméstico}
+\begin{frame}[label={sec:orgea844b0}]{PIB puxado pelo mercado doméstico}
 \begin{figure}[htb]
 \centering
 \caption{Decomposição da taxa de crescimento do produto - Domésticos e externos} 
@@ -255,7 +288,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 
-\begin{frame}[label={sec:org5e7cc8e}]{Crescimento e o investimento induzido}
+\begin{frame}[label={sec:org1c55de6}]{Crescimento e o investimento induzido}
 \begin{figure}[htb]
 \centering
 \caption{Taxa de crescimento do produto - decomposição total} 
@@ -268,7 +301,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 
 
 
-\begin{frame}[label={sec:org30f1f94}]{Investimento público em recuperação \cite{orair_investimento_2016}}
+\begin{frame}[label={sec:org1674885}]{Investimento público em recuperação \cite{orair_investimento_2016}}
 \begin{table}[htbp]
 \caption{Taxa de crescimento do investimentos públicos (1994-2015)}
 \centering
@@ -289,7 +322,7 @@ Ano & Gov. Central & Gov. Geral & Setor Público & PIB\\
 
 
 
-\begin{frame}[label={sec:org22998d6}]{Emprego}
+\begin{frame}[label={sec:orgb928154}]{Emprego}
 \begin{figure}[htb]
 \centering
 \caption{Índice do Emprego Formal} 
@@ -300,7 +333,7 @@ Ano & Gov. Central & Gov. Geral & Setor Público & PIB\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org636c4ad}]{Taxa de câmbio nominal}
+\begin{frame}[label={sec:org3fac373}]{Taxa de câmbio nominal}
 \begin{figure}[htb]
 \centering
 \caption{ Índice da taxa de câmbio efetiva nominal\\Jun/1994=100 } 
@@ -311,7 +344,7 @@ Ano & Gov. Central & Gov. Geral & Setor Público & PIB\\
 \end{frame}
 
 
-\begin{frame}[label={sec:orgaca690e}]{Taxa de juros selic}
+\begin{frame}[label={sec:org4771d3e}]{Taxa de juros selic}
 \begin{figure}[htb]
 \centering
 \caption{Taxa de juros selic a.a. (efetivo x meta)\\Anualizada base 252} 
@@ -322,7 +355,7 @@ Ano & Gov. Central & Gov. Geral & Setor Público & PIB\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org24e2c88}]{Finalmente, inflação (ops, IPCA)}
+\begin{frame}[label={sec:org42e0873}]{Finalmente, inflação (ops, IPCA)}
 \begin{figure}[htb]
 \centering
 \caption{IPCA e Metas para Inflação} 
@@ -331,13 +364,13 @@ Ano & Gov. Central & Gov. Geral & Setor Público & PIB\\
 \caption*{\textbf{Fonte:} BCB}
 \end{figure}
 \end{frame}
-\begin{frame}[label={sec:org34db6da}]{Composição do IPCA \cite{bcb_2019_Atualizacoes}}
+\begin{frame}[label={sec:orgf2d37b8}]{Composição do IPCA \cite{bcb_2019_Atualizacoes}}
 \begin{table}[htbp]
 \caption{IPCA: estruturas de ponderação – janeiro de 2018}
 \centering
 \begin{tabular}{lrrr}
 \hline
-Grupo & POF 2008-2009 & POF 2017-2018 & Diferença (p.p.)\\
+Grupo & 2008-2009 & 2017-2018 & \(\Delta\)\\
 \hline
 Alimentação e bebidas & 24.58 & 18.99 & -5.59\\
 Habitação & 15.72 & 15.16 & -0.56\\
@@ -352,7 +385,7 @@ Comunicação & 3.65 & 6.19 & 2.54\\
 \end{tabular}
 \end{table}
 \end{frame}
-\begin{frame}[label={sec:org0b5621e}]{Preços livres, monitorados, serviços}
+\begin{frame}[label={sec:org1568556}]{Preços livres, monitorados, serviços}
 \begin{figure}[htb]
 \centering
 \caption{IPCA e seus componentes: preços livres, monitorados e serviços} 
@@ -364,13 +397,13 @@ Comunicação & 3.65 & 6.19 & 2.54\\
 
 
 \section{Governo(s?) Dilma}
-\label{sec:orgb533564}
+\label{sec:org3bb9241}
 
-\begin{frame}[label={sec:org8278899}]{Os três "motores" \cite{serrano_demanda_2015}}
+\begin{frame}[label={sec:orgd26a2aa}]{Os três motores \cite{serrano_demanda_2015}}
 \begin{figure}[htb]
 \centering
 \caption{Os três motores do crescimento} 
-\includegraphics[width = 0.9\textwidth]{./figs/Tenores.png}
+\includegraphics[width = 0.75\textwidth]{./figs/Tenores.png}
 \label{fig:tenores}
 \caption*{\textbf{Fonte:} Elaboração própria}
 \end{figure}
@@ -378,7 +411,7 @@ Comunicação & 3.65 & 6.19 & 2.54\\
 \alert{Principal mudança:} do incentivo à demanda agregada ao incetivo ao investimento privado.
 \end{frame}
 
-\begin{frame}[label={sec:orga8bc420}]{Medidas macroprudenciais}
+\begin{frame}[label={sec:org630ab6a}]{Medidas macroprudenciais}
 \alert{Medidas macroprudenciais:} Redução do crescimento do crédito.
 
 \begin{itemize}
@@ -399,39 +432,28 @@ Comunicação & 3.65 & 6.19 & 2.54\\
 \end{frame}
 
 
-\begin{frame}[label={sec:orga3cb664}]{Desaceleração rudimentar I}
+\begin{frame}[label={sec:org10aa293}]{Desaceleração rudimentar I}
 \begin{table}[htbp]
 \caption{Comparação das taxas de crescimento}
 \centering
 \begin{tabular}{lll}
 \hline
  & 2004-2010 & 2011-2014\\
+\hline
 PIB & 4.4\% & 2.1\%\\
 Produção industrial & 3.6\% & -0.9\%\\
 Taxa de desemprego & 9.0\% & 5.4\%\\
-\hline
-\end{tabular}
-\end{table}
-\end{frame}
-
-
-\begin{frame}[label={sec:org36ec198}]{Desaceleração rudimentar II}
-\begin{table}[htbp]
-\caption{Consumo das famílias}
-\centering
-\begin{tabular}{lll}
-\hline
- & 2004-2010 & 2011-2014\\
 Crédito para habitação & 21,5\% & 4,6\%\\
 Hipotecas & 20,1\% & 29,3\%\\
-Salário real (emp, formal) & 2,9\% & 2,9\%\\
-Renda disponível das famílias & 5,3\% & 1,2\%\\
+Salário real (emp. formal) & 2,9\% & 2,9\%\\
+Renda disp. (Famílias) & 5,3\% & 1,2\%\\
 \hline
 \end{tabular}
 \end{table}
 \end{frame}
 
-\begin{frame}[label={sec:org0d3102e}]{Desaceleração rudimentar III}
+
+\begin{frame}[label={sec:org48500d9}]{Desaceleração rudimentar II}
 \begin{table}[htbp]
 \caption{Política fiscal}
 \centering
@@ -449,7 +471,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org634d435}]{\href{https://www.causaoperaria.org.br/brasil-o-golpe-a-opera-do-fim-do-mundo-artista-retrata-o-golpe-de-estado-no-pais/}{Prêambulo para a ópera do fim do mundo}}
+\begin{frame}[label={sec:org6cbab81}]{\href{https://www.causaoperaria.org.br/brasil-o-golpe-a-opera-do-fim-do-mundo-artista-retrata-o-golpe-de-estado-no-pais/}{Prêambulo para a ópera do fim do mundo}}
 \begin{figure}[htb]
 \centering
 \caption{Brasil, O Golpe: A Ópera do fim do mundo} 
@@ -459,16 +481,16 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 \section{Governos (?) Temer e Início Bolsonaro}
-\label{sec:org64e7e08}
+\label{sec:orgdb8c4da}
 
 \section{Corona-crise}
-\label{sec:org8030c3b}
+\label{sec:org86d3cda}
 \section{Dados 2011-2020}
-\label{sec:org59ed6e2}
+\label{sec:org3bc5120}
 
 
 
-\begin{frame}[label={sec:orgc0b5249}]{PIB puxado pelo mercado doméstico}
+\begin{frame}[label={sec:orgb39e415}]{PIB puxado pelo mercado doméstico}
 \begin{figure}[htb]
 \centering
 \caption{Decomposição da taxa de crescimento do produto - Domésticos e externos} 
@@ -479,7 +501,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org02fee50}]{Crescimento e o investimento induzido}
+\begin{frame}[label={sec:org677759c}]{Crescimento e o investimento induzido}
 \begin{figure}[htb]
 \centering
 \caption{Taxa de crescimento do produto - decomposição total} 
@@ -491,7 +513,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 
 
 
-\begin{frame}[label={sec:org747bf3b}]{Emprego}
+\begin{frame}[label={sec:org2b83b9f}]{Emprego}
 \begin{figure}[htb]
 \centering
 \caption{Índice do Emprego Formal} 
@@ -505,7 +527,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 
 
 
-\begin{frame}[label={sec:org80f4cba}]{Taxa de câmbio nominal}
+\begin{frame}[label={sec:orga154caa}]{Taxa de câmbio nominal}
 \begin{figure}[htb]
 \centering
 \caption{ Índice da taxa de câmbio efetiva nominal\\Jun/1994=100 } 
@@ -516,7 +538,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org0fce1f8}]{Taxa de juros selic}
+\begin{frame}[label={sec:org545a543}]{Taxa de juros selic}
 \begin{figure}[htb]
 \centering
 \caption{Taxa de juros selic a.a. (efetivo x meta)\\Anualizada base 252} 
@@ -527,7 +549,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org6b2ad99}]{Finalmente, inflação (ops, IPCA)}
+\begin{frame}[label={sec:org7028f76}]{Finalmente, inflação (ops, IPCA)}
 \begin{figure}[htb]
 \centering
 \caption{IPCA e Metas para Inflação} 
@@ -536,7 +558,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \caption*{\textbf{Fonte:} BCB}
 \end{figure}
 \end{frame}
-\begin{frame}[label={sec:org836ad54}]{Preços livres, monitorados, serviços}
+\begin{frame}[label={sec:org9061858}]{Preços livres, monitorados, serviços}
 \begin{figure}[htb]
 \centering
 \caption{IPCA e seus componentes: preços livres, monitorados e serviços} 
@@ -549,9 +571,9 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 
 
 \section{Referências}
-\label{sec:org97121ac}
+\label{sec:orgfe5f789}
 
-\begin{frame}[label={sec:org912bf33}]{Referências}
+\begin{frame}[label={sec:org410841b}]{Referências}
 
 \printbibliography
 \end{frame}
