--- a/Materias/2S2020/PED_CE342/Turma_C/Turma_C.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/Turma_C.org
@@ -1033,8 +1033,11 @@ plt.savefig("./figs/turintin_NCM_fig.png")
 plt.close()
 #+END_SRC
 
-#+RESULTS:
-[[file:./figs/turintin_NCM_fig.png]]
+**** Atualização das notas
+
+#+BEGIN_SRC python
+df.loc["244207", "Resenha Regime de Metas"] = 0
+#+END_SRC
 
 * Lista de presença e notas
 ** Lista de chamada com nota das resenhas                            :ignore:
